--- a/style.css
+++ b/style.css
@@ -14,10 +14,14 @@ body {
 
 h1 {
   margin-bottom: 3rem;
+  font-size: 2rem;
+  line-height: 1.2;
 }
 
 p {
   margin-bottom: 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
 
 p:last-child {
@@ -51,6 +55,8 @@ main {
   margin-top: -16px;
   margin-bottom: 1rem;
   padding: 16px 32px;
+  font-size: 1.5rem;
+  line-height: 1.2;
 }
 
 
