add colors & borders

--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ p:last-child {
   margin-bottom: 0;
 }
 
+strong {
+  color: hsl(160deg 100% 30%);
+}
+
+header {
+  border-bottom: 8px solid hsl(0deg 0% 60%);
+}
+
 .max-width-wrapper {
   max-width: 800px;
   margin: 0 auto;
@@ -42,11 +50,13 @@ p:last-child {
 
 main {
   padding: 64px 0;
+  background-color: hsl(0deg 0% 40%);
 }
 
 .card {
   padding: 24px;
   margin: 0 -24px;
+  background-color: white;
 }
 
 .indented-heading {
@@ -57,6 +67,8 @@ main {
   padding: 16px 32px;
   font-size: 1.5rem;
   line-height: 1.2;
+  background-color: hsl(45deg 100% 50%);
+  border-bottom: 8px solid hsl(45deg 100% 40%);
 }
 
 
